clib_packages/xforms/package/include/xforms_forms.h

/* The screen coordinate unit, FL_Coord, must be of signed type */

typedef int FL_Coord;
typedef unsigned long FL_COLOR;
typedef struct FL_FORM_    FL_FORM;
typedef struct FL_OBJECT_  FL_OBJECT;
/* Callback function for an entire form */

typedef void ( * FL_FORMCALLBACKPTR )( FL_OBJECT *,
                                       void * );
/* Object callback function      */

typedef void ( * FL_CALLBACKPTR )( FL_OBJECT *,
                                   long );
/* Preemptive callback function  */

typedef int ( * FL_RAW_CALLBACK )( FL_FORM *,
                                   void * );
/* At close (WM menu delete/close etc.) function */

typedef int ( * FL_FORM_ATCLOSE )( FL_FORM *,
                                   void * );
/* Deactivate/activate callback */

typedef void ( * FL_FORM_ATDEACTIVATE )( FL_FORM *,
                                         void * );
typedef void ( * FL_FORM_ATACTIVATE )( FL_FORM *,
                                       void * );
typedef int ( * FL_HANDLEPTR )( FL_OBJECT *,
                                int,
                                FL_Coord,
                                FL_Coord,
                                int,
                                void * );
/* Timeouts */

typedef void (* FL_TIMEOUT_CALLBACK )( int, void * );
extern int fl_add_timeout( long                  msec,
                              FL_TIMEOUT_CALLBACK   callback,
                              void                * data );
extern void fl_remove_timeout( int id );
/* Basic public routine prototypes */

extern int fl_library_version( int * ver,
                                  int * rev );
extern long fl_library_full_version( int         * version,
										int         * revision,
										int         * fix_level,
										const char ** extra );
/** Generic routines that deal with FORMS **/

extern FL_FORM * fl_bgn_form( int      type,
                                 FL_Coord w,
                                 FL_Coord h );
extern void fl_end_form( void );
extern FL_OBJECT * fl_do_forms( void );
extern FL_OBJECT * fl_check_forms( void );
extern FL_OBJECT * fl_do_only_forms( void );
extern FL_OBJECT * fl_check_only_forms( void );
extern void fl_freeze_form( FL_FORM * form );
extern void fl_set_focus_object( FL_FORM   * form,
                                    FL_OBJECT * obj );
extern FL_OBJECT *fl_get_focus_object( FL_FORM * form );
extern void fl_reset_focus_object( FL_OBJECT * ob );
#define fl_set_object_focus   fl_set_focus_object
extern FL_FORM_ATCLOSE fl_set_form_atclose( FL_FORM         * form,
                                               FL_FORM_ATCLOSE   fmclose,
                                               void            * data );
extern FL_FORM_ATCLOSE fl_set_atclose( FL_FORM_ATCLOSE   fmclose,
                                          void            * data );
extern FL_FORM_ATACTIVATE fl_set_form_atactivate( FL_FORM            * form,
													 FL_FORM_ATACTIVATE   cb,
													 void               * data );
extern FL_FORM_ATDEACTIVATE fl_set_form_atdeactivate( FL_FORM              * form,
														 FL_FORM_ATDEACTIVATE   cb,
														 void                 * data );
extern void fl_unfreeze_form( FL_FORM * form );
extern int fl_form_is_activated( FL_FORM * form );
extern void fl_deactivate_form( FL_FORM * form );
extern void fl_activate_form( FL_FORM * form );
extern void fl_deactivate_all_forms( void );
extern void fl_activate_all_forms( void );
extern void fl_freeze_all_forms( void );
extern void fl_unfreeze_all_forms( void );
extern void fl_scale_form( FL_FORM * form,
                              double    xsc,
                              double    ysc );
extern void fl_set_form_position( FL_FORM  * form,
                                     FL_Coord   x,
                                     FL_Coord   y );
extern void fl_set_form_title( FL_FORM    * form,
                                  const char * name );
extern void fl_set_form_title_f( FL_FORM *    form,
									const char * fmt,
									... );
extern void fl_set_app_mainform( FL_FORM * form );
extern FL_FORM * fl_get_app_mainform( void );
extern void fl_set_app_nomainform( int flag );
extern void fl_set_form_callback( FL_FORM            * form,
                                     FL_FORMCALLBACKPTR   callback,
                                     void               * d );
#define  fl_set_form_call_back    fl_set_form_callback
extern void fl_set_form_size( FL_FORM  * form,
                                 FL_Coord   w,
                                 FL_Coord   h );
extern void fl_set_form_background_color( FL_FORM * form,
											 FL_COLOR  color );
extern FL_COLOR fl_get_form_background_color( FL_FORM * form );
extern void fl_set_form_hotspot( FL_FORM  * form,
                                    FL_Coord   x,
                                    FL_Coord   y );
extern void fl_set_form_hotobject( FL_FORM   * form,
                                      FL_OBJECT * ob );
extern void fl_set_form_minsize( FL_FORM  * form,
                                    FL_Coord   w,
                                    FL_Coord   h );
extern void fl_set_form_maxsize( FL_FORM  * form,
                                    FL_Coord   w,
                                    FL_Coord   h );
extern void fl_set_form_event_cmask( FL_FORM       * form,
                                        unsigned long   cmask );
extern unsigned long fl_get_form_event_cmask( FL_FORM * form );
extern void fl_set_form_geometry( FL_FORM  * form,
                                     FL_Coord   x,
                                     FL_Coord   y,
                                     FL_Coord   w,
                                     FL_Coord   h );
#define fl_set_initial_placement fl_set_form_geometry
extern Window fl_show_form( FL_FORM    * form,
                               int          place,
                               int          border,
                               const char * name );
extern Window fl_show_form_f( FL_FORM    * form,
								 int          place,
								 int          border,
								 const char * fmt,
								 ... );
extern void fl_hide_form( FL_FORM * form );
extern void fl_free_form( FL_FORM * form );
extern void fl_redraw_form( FL_FORM * form );
extern void fl_set_form_dblbuffer( FL_FORM * form,
                                      int       y );
extern Window fl_prepare_form_window( FL_FORM    * form,
                                         int          place,
                                         int          border,
                                         const char * name );
extern Window fl_prepare_form_window_f( FL_FORM    * form,
										   int          place,
										   int          border,
										   const char * fmt,
										   ... );
extern Window fl_show_form_window( FL_FORM * form );
extern double fl_adjust_form_size( FL_FORM * form );
extern int fl_form_is_visible( FL_FORM * form );
extern int fl_form_is_iconified( FL_FORM * form );
extern FL_RAW_CALLBACK fl_register_raw_callback( FL_FORM         * form,
                                                    unsigned long     mask,
                                                    FL_RAW_CALLBACK   rcb );
#define fl_register_call_back fl_register_raw_callback
extern FL_OBJECT * fl_bgn_group( void );
extern void fl_end_group( void );
extern FL_OBJECT *fl_addto_group( FL_OBJECT * group );
/****** Routines that deal with FL_OBJECTS ********/

extern int fl_get_object_objclass( FL_OBJECT * obj );
extern int fl_get_object_type( FL_OBJECT * obj );
extern void fl_set_object_boxtype( FL_OBJECT * ob,
                                      int         boxtype );
extern int fl_get_object_boxtype( FL_OBJECT * obj );
extern void fl_set_object_bw( FL_OBJECT * ob,
                                 int         bw );
extern int fl_get_object_bw( FL_OBJECT * ob );
extern void fl_set_object_resize( FL_OBJECT    * ob,
                                     unsigned int   what );
extern void fl_get_object_resize( FL_OBJECT    * ob,
                                     unsigned int * what );
extern void fl_set_object_gravity( FL_OBJECT    * ob,
                                      unsigned int   nw,
                                      unsigned int   se );
extern void fl_get_object_gravity( FL_OBJECT    * ob,
                                      unsigned int * nw,
                                      unsigned int * se );
extern void fl_set_object_lsize( FL_OBJECT * obj,
                                    int         lsize );
extern int fl_get_object_lsize( FL_OBJECT * obj );
extern void fl_set_object_lstyle( FL_OBJECT * obj,
                                     int         lstyle );
extern int fl_get_object_lstyle( FL_OBJECT * obj );
extern void fl_set_object_lcol( FL_OBJECT * ob,
								   FL_COLOR    lcol );
extern FL_COLOR fl_get_object_lcol( FL_OBJECT * obj );
extern unsigned int fl_set_object_return( FL_OBJECT    * ob,
											 unsigned int   when );
extern unsigned int fl_get_object_return( FL_OBJECT * ob );
extern void fl_set_object_lalign( FL_OBJECT * obj,
                                     int         align );
extern int fl_get_object_lalign( FL_OBJECT * obj );
extern void fl_set_object_shortcut( FL_OBJECT  * obj,
                                       const char * sstr,
                                       int          showit );
extern void fl_set_object_shortcutkey( FL_OBJECT    * obj,
                                          unsigned int   keysym );
extern void fl_set_object_dblbuffer( FL_OBJECT * ob,
                                        int         y );
extern void fl_set_object_color( FL_OBJECT * ob,
                                    FL_COLOR    col1,
                                    FL_COLOR    col2 );
extern void fl_get_object_color( FL_OBJECT * obj,
									FL_COLOR  * col1,
									FL_COLOR  * col2 );
extern void fl_set_object_label( FL_OBJECT  * ob,
                                    const char * label );
extern void fl_set_object_label_f( FL_OBJECT  * obj,
									  const char * fmt,
									  ... );
extern const char * fl_get_object_label( FL_OBJECT * obj );
extern void fl_set_object_helper( FL_OBJECT  * ob,
                                     const char * tip );
extern void fl_set_object_helper_f( FL_OBJECT  * ob,
									   const char * fmt,
									   ... );
extern void fl_set_object_position( FL_OBJECT * obj,
                                       FL_Coord    x,
                                       FL_Coord    y );
extern void fl_get_object_size( FL_OBJECT * obj,
                                   FL_Coord  * w,
                                   FL_Coord  * h );
extern void fl_set_object_size( FL_OBJECT * obj,
                                   FL_Coord    w,
                                   FL_Coord    h );
extern void fl_set_object_automatic( FL_OBJECT * obj,
                                        int         flag );
extern int fl_object_is_automatic( FL_OBJECT * obj );
extern void fl_draw_object_label( FL_OBJECT * ob );
extern void fl_draw_object_label_outside( FL_OBJECT * ob );
extern FL_OBJECT * fl_get_object_component( FL_OBJECT * composite,
                                               int          objclass,
                                               int          type,
                                               int          numb );
extern void fl_for_all_objects( FL_FORM * form,
                                   int       ( * cb )( FL_OBJECT *, void * ),
                                   void    * v );
#define fl_draw_object_outside_label fl_draw_object_label_outside
extern void fl_set_object_dblclick( FL_OBJECT     * obj,
									   unsigned long   timeout );
extern unsigned long fl_get_object_dblclick( FL_OBJECT * obj );
extern void fl_set_object_geometry( FL_OBJECT * obj,
                                       FL_Coord    x,
                                       FL_Coord    y,
                                       FL_Coord    w,
                                       FL_Coord    h );
extern void fl_move_object( FL_OBJECT * obj,
                               FL_Coord    dx,
                               FL_Coord    dy );
#define fl_set_object_lcolor  fl_set_object_lcol
#define fl_get_object_lcolor  fl_get_object_lcol
extern void fl_fit_object_label( FL_OBJECT * obj,
                                    FL_Coord    xmargin,
                                    FL_Coord    ymargin );
extern void fl_get_object_geometry( FL_OBJECT * ob,
                                       FL_Coord  *  x,
                                       FL_Coord  *  y,
                                       FL_Coord  *  w,
                                       FL_Coord  *  h );
extern void fl_get_object_position( FL_OBJECT * ob,
                                       FL_Coord  * x,
                                       FL_Coord  * y );
/* This one takes into account the label */

extern void fl_get_object_bbox( FL_OBJECT * obj,
                                   FL_Coord  * x,
                                   FL_Coord  * y,
                                   FL_Coord  * w,
                                   FL_Coord  * h );
#define fl_compute_object_geometry   fl_get_object_bbox
extern void fl_call_object_callback( FL_OBJECT * ob );
extern FL_HANDLEPTR fl_set_object_prehandler( FL_OBJECT    * ob,
                                                 FL_HANDLEPTR   phandler );
extern FL_HANDLEPTR fl_set_object_posthandler( FL_OBJECT    * ob,
                                                  FL_HANDLEPTR   post );
extern FL_CALLBACKPTR fl_set_object_callback( FL_OBJECT      * obj,
                                                 FL_CALLBACKPTR   callback,
                                                 long             argument );
#define fl_set_object_align   fl_set_object_lalign
#define fl_set_call_back      fl_set_object_callback