xforms/package/alt/xforms_forms.pp


function fl_add_timeout(msec:longint; callback:TFL_TIMEOUT_CALLBACK; data:pointer):longint;cdecl;external;
procedure fl_remove_timeout(id:longint);cdecl;external;
    { Basic public routine prototypes  }
function fl_library_version(ver:Plongint; rev:Plongint):longint;cdecl;external;
(* Const before type ignored *)
function fl_library_full_version(version:Plongint; revision:Plongint; fix_level:Plongint; extra:PPchar):longint;cdecl;external;
    {* Generic routines that deal with FORMS * }
function fl_bgn_form(_type:longint; w:TFL_Coord; h:TFL_Coord):PFL_FORM;cdecl;external;
procedure fl_end_form;cdecl;external;
function fl_do_forms:PFL_OBJECT;cdecl;external;
function fl_check_forms:PFL_OBJECT;cdecl;external;
function fl_do_only_forms:PFL_OBJECT;cdecl;external;
function fl_check_only_forms:PFL_OBJECT;cdecl;external;
procedure fl_freeze_form(form:PFL_FORM);cdecl;external;
procedure fl_set_focus_object(form:PFL_FORM; obj:PFL_OBJECT);cdecl;external;
function fl_get_focus_object(form:PFL_FORM):PFL_OBJECT;cdecl;external;
procedure fl_reset_focus_object(ob:PFL_OBJECT);cdecl;external;
    const
      fl_set_object_focus = fl_set_focus_object;      

function fl_set_form_atclose(form:PFL_FORM; fmclose:TFL_FORM_ATCLOSE; data:pointer):TFL_FORM_ATCLOSE;cdecl;external;
function fl_set_atclose(fmclose:TFL_FORM_ATCLOSE; data:pointer):TFL_FORM_ATCLOSE;cdecl;external;
function fl_set_form_atactivate(form:PFL_FORM; cb:TFL_FORM_ATACTIVATE; data:pointer):TFL_FORM_ATACTIVATE;cdecl;external;
function fl_set_form_atdeactivate(form:PFL_FORM; cb:TFL_FORM_ATDEACTIVATE; data:pointer):TFL_FORM_ATDEACTIVATE;cdecl;external;
procedure fl_unfreeze_form(form:PFL_FORM);cdecl;external;
function fl_form_is_activated(form:PFL_FORM):longint;cdecl;external;
procedure fl_deactivate_form(form:PFL_FORM);cdecl;external;
procedure fl_activate_form(form:PFL_FORM);cdecl;external;
procedure fl_deactivate_all_forms;cdecl;external;
procedure fl_activate_all_forms;cdecl;external;
procedure fl_freeze_all_forms;cdecl;external;
procedure fl_unfreeze_all_forms;cdecl;external;
procedure fl_scale_form(form:PFL_FORM; xsc:Tdouble; ysc:Tdouble);cdecl;external;
procedure fl_set_form_position(form:PFL_FORM; x:TFL_Coord; y:TFL_Coord);cdecl;external;
(* Const before type ignored *)
procedure fl_set_form_title(form:PFL_FORM; name:Pchar);cdecl;external;
(* Const before type ignored *)
procedure fl_set_form_title_f(form:PFL_FORM; fmt:Pchar; args:array of const);cdecl;external;
procedure fl_set_form_title_f(form:PFL_FORM; fmt:Pchar);cdecl;external;
procedure fl_set_app_mainform(form:PFL_FORM);cdecl;external;
function fl_get_app_mainform:PFL_FORM;cdecl;external;
procedure fl_set_app_nomainform(flag:longint);cdecl;external;
procedure fl_set_form_callback(form:PFL_FORM; callback:TFL_FORMCALLBACKPTR; d:pointer);cdecl;external;
    const
      fl_set_form_call_back = fl_set_form_callback;      

procedure fl_set_form_size(form:PFL_FORM; w:TFL_Coord; h:TFL_Coord);cdecl;external;
procedure fl_set_form_background_color(form:PFL_FORM; color:TFL_COLOR);cdecl;external;
function fl_get_form_background_color(form:PFL_FORM):TFL_COLOR;cdecl;external;
procedure fl_set_form_hotspot(form:PFL_FORM; x:TFL_Coord; y:TFL_Coord);cdecl;external;
procedure fl_set_form_hotobject(form:PFL_FORM; ob:PFL_OBJECT);cdecl;external;
procedure fl_set_form_minsize(form:PFL_FORM; w:TFL_Coord; h:TFL_Coord);cdecl;external;
procedure fl_set_form_maxsize(form:PFL_FORM; w:TFL_Coord; h:TFL_Coord);cdecl;external;
procedure fl_set_form_event_cmask(form:PFL_FORM; cmask:dword);cdecl;external;
function fl_get_form_event_cmask(form:PFL_FORM):dword;cdecl;external;
procedure fl_set_form_geometry(form:PFL_FORM; x:TFL_Coord; y:TFL_Coord; w:TFL_Coord; h:TFL_Coord);cdecl;external;
    const
      fl_set_initial_placement = fl_set_form_geometry;      
(* Const before type ignored *)

function fl_show_form(form:PFL_FORM; place:longint; border:longint; name:Pchar):TWindow;cdecl;external;
(* Const before type ignored *)
function fl_show_form_f(form:PFL_FORM; place:longint; border:longint; fmt:Pchar; args:array of const):TWindow;cdecl;external;
function fl_show_form_f(form:PFL_FORM; place:longint; border:longint; fmt:Pchar):TWindow;cdecl;external;
procedure fl_hide_form(form:PFL_FORM);cdecl;external;
procedure fl_free_form(form:PFL_FORM);cdecl;external;
procedure fl_redraw_form(form:PFL_FORM);cdecl;external;
procedure fl_set_form_dblbuffer(form:PFL_FORM; y:longint);cdecl;external;
(* Const before type ignored *)
function fl_prepare_form_window(form:PFL_FORM; place:longint; border:longint; name:Pchar):TWindow;cdecl;external;
(* Const before type ignored *)
function fl_prepare_form_window_f(form:PFL_FORM; place:longint; border:longint; fmt:Pchar; args:array of const):TWindow;cdecl;external;
function fl_prepare_form_window_f(form:PFL_FORM; place:longint; border:longint; fmt:Pchar):TWindow;cdecl;external;
function fl_show_form_window(form:PFL_FORM):TWindow;cdecl;external;
function fl_adjust_form_size(form:PFL_FORM):Tdouble;cdecl;external;
function fl_form_is_visible(form:PFL_FORM):longint;cdecl;external;
function fl_form_is_iconified(form:PFL_FORM):longint;cdecl;external;
function fl_register_raw_callback(form:PFL_FORM; mask:dword; rcb:TFL_RAW_CALLBACK):TFL_RAW_CALLBACK;cdecl;external;
    const
      fl_register_call_back = fl_register_raw_callback;      

function fl_bgn_group:PFL_OBJECT;cdecl;external;
procedure fl_end_group;cdecl;external;
function fl_addto_group(group:PFL_OBJECT):PFL_OBJECT;cdecl;external;
    {***** Routines that deal with FL_OBJECTS ******* }
function fl_get_object_objclass(obj:PFL_OBJECT):longint;cdecl;external;
function fl_get_object_type(obj:PFL_OBJECT):longint;cdecl;external;
procedure fl_set_object_boxtype(ob:PFL_OBJECT; boxtype:longint);cdecl;external;
function fl_get_object_boxtype(obj:PFL_OBJECT):longint;cdecl;external;
procedure fl_set_object_bw(ob:PFL_OBJECT; bw:longint);cdecl;external;
function fl_get_object_bw(ob:PFL_OBJECT):longint;cdecl;external;
procedure fl_set_object_resize(ob:PFL_OBJECT; what:dword);cdecl;external;
procedure fl_get_object_resize(ob:PFL_OBJECT; what:Pdword);cdecl;external;
procedure fl_set_object_gravity(ob:PFL_OBJECT; nw:dword; se:dword);cdecl;external;
procedure fl_get_object_gravity(ob:PFL_OBJECT; nw:Pdword; se:Pdword);cdecl;external;
procedure fl_set_object_lsize(obj:PFL_OBJECT; lsize:longint);cdecl;external;
function fl_get_object_lsize(obj:PFL_OBJECT):longint;cdecl;external;
procedure fl_set_object_lstyle(obj:PFL_OBJECT; lstyle:longint);cdecl;external;
function fl_get_object_lstyle(obj:PFL_OBJECT):longint;cdecl;external;
procedure fl_set_object_lcol(ob:PFL_OBJECT; lcol:TFL_COLOR);cdecl;external;
function fl_get_object_lcol(obj:PFL_OBJECT):TFL_COLOR;cdecl;external;
function fl_set_object_return(ob:PFL_OBJECT; when:dword):dword;cdecl;external;
function fl_get_object_return(ob:PFL_OBJECT):dword;cdecl;external;
procedure fl_set_object_lalign(obj:PFL_OBJECT; align:longint);cdecl;external;
function fl_get_object_lalign(obj:PFL_OBJECT):longint;cdecl;external;
(* Const before type ignored *)
procedure fl_set_object_shortcut(obj:PFL_OBJECT; sstr:Pchar; showit:longint);cdecl;external;
procedure fl_set_object_shortcutkey(obj:PFL_OBJECT; keysym:dword);cdecl;external;
procedure fl_set_object_dblbuffer(ob:PFL_OBJECT; y:longint);cdecl;external;
procedure fl_set_object_color(ob:PFL_OBJECT; col1:TFL_COLOR; col2:TFL_COLOR);cdecl;external;
procedure fl_get_object_color(obj:PFL_OBJECT; col1:PFL_COLOR; col2:PFL_COLOR);cdecl;external;
(* Const before type ignored *)
procedure fl_set_object_label(ob:PFL_OBJECT; _label:Pchar);cdecl;external;
(* Const before type ignored *)
procedure fl_set_object_label_f(obj:PFL_OBJECT; fmt:Pchar; args:array of const);cdecl;external;
procedure fl_set_object_label_f(obj:PFL_OBJECT; fmt:Pchar);cdecl;external;
(* Const before type ignored *)
function fl_get_object_label(obj:PFL_OBJECT):Pchar;cdecl;external;
(* Const before type ignored *)
procedure fl_set_object_helper(ob:PFL_OBJECT; tip:Pchar);cdecl;external;
(* Const before type ignored *)
procedure fl_set_object_helper_f(ob:PFL_OBJECT; fmt:Pchar; args:array of const);cdecl;external;
procedure fl_set_object_helper_f(ob:PFL_OBJECT; fmt:Pchar);cdecl;external;
procedure fl_set_object_position(obj:PFL_OBJECT; x:TFL_Coord; y:TFL_Coord);cdecl;external;
procedure fl_get_object_size(obj:PFL_OBJECT; w:PFL_Coord; h:PFL_Coord);cdecl;external;
procedure fl_set_object_size(obj:PFL_OBJECT; w:TFL_Coord; h:TFL_Coord);cdecl;external;
procedure fl_set_object_automatic(obj:PFL_OBJECT; flag:longint);cdecl;external;
function fl_object_is_automatic(obj:PFL_OBJECT):longint;cdecl;external;
procedure fl_draw_object_label(ob:PFL_OBJECT);cdecl;external;
procedure fl_draw_object_label_outside(ob:PFL_OBJECT);cdecl;external;
function fl_get_object_component(composite:PFL_OBJECT; objclass:longint; _type:longint; numb:longint):PFL_OBJECT;cdecl;external;
procedure fl_for_all_objects(form:PFL_FORM; cb:function (para1:PFL_OBJECT; para2:pointer):longint; v:pointer);cdecl;external;
    const
      fl_draw_object_outside_label = fl_draw_object_label_outside;      

procedure fl_set_object_dblclick(obj:PFL_OBJECT; timeout:dword);cdecl;external;
function fl_get_object_dblclick(obj:PFL_OBJECT):dword;cdecl;external;
procedure fl_set_object_geometry(obj:PFL_OBJECT; x:TFL_Coord; y:TFL_Coord; w:TFL_Coord; h:TFL_Coord);cdecl;external;
procedure fl_move_object(obj:PFL_OBJECT; dx:TFL_Coord; dy:TFL_Coord);cdecl;external;
    const
      fl_set_object_lcolor = fl_set_object_lcol;      
      fl_get_object_lcolor = fl_get_object_lcol;      

procedure fl_fit_object_label(obj:PFL_OBJECT; xmargin:TFL_Coord; ymargin:TFL_Coord);cdecl;external;
procedure fl_get_object_geometry(ob:PFL_OBJECT; x:PFL_Coord; y:PFL_Coord; w:PFL_Coord; h:PFL_Coord);cdecl;external;
procedure fl_get_object_position(ob:PFL_OBJECT; x:PFL_Coord; y:PFL_Coord);cdecl;external;
    { This one takes into account the label  }
procedure fl_get_object_bbox(obj:PFL_OBJECT; x:PFL_Coord; y:PFL_Coord; w:PFL_Coord; h:PFL_Coord);cdecl;external;
    const
      fl_compute_object_geometry = fl_get_object_bbox;      

procedure fl_call_object_callback(ob:PFL_OBJECT);cdecl;external;
function fl_set_object_prehandler(ob:PFL_OBJECT; phandler:TFL_HANDLEPTR):TFL_HANDLEPTR;cdecl;external;
function fl_set_object_posthandler(ob:PFL_OBJECT; post:TFL_HANDLEPTR):TFL_HANDLEPTR;cdecl;external;
function fl_set_object_callback(obj:PFL_OBJECT; callback:TFL_CALLBACKPTR; argument:longint):TFL_CALLBACKPTR;cdecl;external;
    const
      fl_set_object_align = fl_set_object_lalign;      
      fl_set_call_back = fl_set_object_callback;      
